test/compile_errors/err_extension_method_unknown_qualified.w
//! expect-error: unknown qualified extension method 'slug.missing'

use extension_coherence.base
use extension_coherence.slug

fn main:
    let t = Target { value: 1 }
    let _ = slug.missing(t)
